<resources>
    <string name="app_name">Srini</string>
    <string name="title_activity_main">Jaaga Learning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="username">My Name</string>
    <string name="input_chat_box">Type a answer/command</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string-array name="hello">
        
        <item>Hello!</item>
        <item>Hey there.</item>
        <item>Namaste.</item>
    </string-array>
    <string-array name="bye">
        
        <item>Bye...</item>
        <item>Bye...</item>
        <item>Bye now...</item>
        <item>See you.</item>
        <item>So long. See you...</item>
        <item>See you later.</item>
        <item>See you later.</item>
        <item>See you later, alligator.</item>
        <item>Take care. Bye!</item>
        <item>Take care!</item>
        <item>Adios, amigo.</item>
        <item>Later!</item>
    </string-array>
    <string-array name="correct">
        
        <item>Right.</item>
        <item>Right.</item>
        <item>Right!</item>
        <item>Correct.</item>
        <item>That\'s right.</item>
        <item>Yes!</item>
        <item>That\'s it.</item>
        <item>Exactly.</item>
        <item>You got it.</item>
        <item>You nailed it.</item>
        <item>Good!</item>
        <item>Nice.</item>
        <item>Good job.</item>
    </string-array>
    <string-array name="incorrect">
        
        <item>That\'s not the answer I\'m looking for.</item>
        <item>Hmm... Not quite.</item>
        <item>No, that\'s not it.</item>
        <item>Nice try, but not quite.</item>
        <item>Uh-oh. That\'s not it.</item>
        <item>No. Let\'s try this again.</item>
        <item>Try again.</item>
    </string-array>
    <string-array name="encourage">
        
        <item>You\'re doing great.</item>
        <item>So far so good.</item>
        <item>You\'re on a roll!</item>
        <item>Show them how it\'s done!</item>
        <item>Keep up the good work.</item>
        <item>Keep it up.</item>
        <item>Keep going.</item>
        <item>You\'re getting there.</item>
    </string-array>
    <string-array name="one_left">
        
        <item>Just one problem left in this skill.</item>
        <item>Only one more to go in this skill.</item>
    </string-array>
    <string-array name="ask_name">
        
        <item>What\'s your name?</item>
    </string-array>
    <string name="level_up">Congratulations!!! You passed %1$s\
        and earned %2$d points. You now have %3$d total points.\
        Now it\'s time to practice %4$s.</string>
    <string-array name="admin_prompt">
         
        
        <item>Yes, Master...</item>
    </string-array>
    <string name="invalid_mission">Invalid Mission</string>
    <string name="button_en">English</string>
    <string name="button_mr">मराठी</string>
    <string name="button_es">español</string>
    <string name="button_hi">हिंदी</string>
    <string name="button_kn">ಕನ್ನಡ</string>
    <string name="basic_math_mission">Basic math including addition, subtraction, multiplication, division, negative numbers, decimals, and variables</string>
    <string name="addition_title">"Addition to %d"</string>
    <string name="rounding_title">Rounding Numbers upto 3 decimal places</string>
    <string name="addition_negative_title">"Addition to %d with negative numbers"</string>
    <string name="decimal_addition_title">Addition to %d with Decimals</string>
    <string name="decimal_division_title">Decimal Division with Dividends to %1$d and Divisors to %2$d</string>
    <string name="decimal_multiplication_title">Decimal Multiplication to %d</string>
    <string name="division_title">Division with Dividends to %1$d and Divisors to %2$d</string>
    <string name="division_remainders_title">Division with Remainders with Dividends to %1$d and Divisors to %2$d</string>
    <string name="fractions_title">Fractions</string>
    <string name="multiplication_title">Multiplication to %d</string>
    <string name="multiplication_negative_title">Multiplication to %d with Negative Numbers</string>
    <string name="number_sequences_title">Number Sequences</string>
    <string name="percentages_title">Percentages</string>
    <string name="subtraction_title">Subtraction to %d</string>
    <string name="subtraction_negative_title">Subtraction to %d with Negative Numbers</string>
    <string name="var_addition_title">Variable Addition to %d</string>
    <string name="var_division_title">Variable Division with Dividends to %1$d and Divisors to %2$d</string>
    <string name="var_multiplication_title">Variable Multiplication to %d</string>
    <string name="var_subtraction_title">Variable Subtraction to %d</string>
    <string name="equation_title">Simple equations with one variable</string>
    <string name="function_title">Simple functions with variable substitution</string>
    <string name="linear_function_title">Linear Functions</string>
    <string name="simple_rounding_title">Simple Rounding</string>
    <string name="ball">ball</string>
    <string name="tree">tree</string>
    <string name="car">car</string>
    <string-array name="birds">
        <item>cock</item>
        <item>crane</item>
        <item>crow</item>
        <item>cuckoo</item>
        <item>dove</item>
        <item>duck</item>
        <item>eagle</item>
        <item>hen</item>
        <item>kingfisher</item>
        <item>kite</item>
        <item>mynah</item>
        <item>ostrich</item>
        <item>owl</item>
        <item>parrot</item>
        <item>peacock</item>
        <item>pigeon</item>
        <item>skylark</item>
        <item>sparrow</item>
        <item>swan</item>
        <item>turkey</item>
        <item>woodpecker</item>
    </string-array>
    <string-array name="animals">
        <item>ant</item>
        <item>bear</item>
        <item>buffalo</item>
        <item>camel</item>
        <item>cat</item>
        <item>cow</item>
        <item>crocodile</item>
        <item>deer</item>
        <item>dog</item>
        <item>donkey</item>
        <item>elephant</item>
        <item>fox</item>
        <item>goat</item>
        <item>horse</item>
        <item>lion</item>
        <item>monkey</item>
        <item>mouse</item>
        <item>pig</item>
        <item>rabbit</item>
        <item>sheep</item>
        <item>snake</item>
        <item>spider</item>
        <item>squirrel</item>
        <item>tiger</item>
        <item>turtle</item>
        <item>wolf</item>
    </string-array>
    <string-array name="vegetables">
        <item>beetroot</item>
        <item>lettuce</item>
        <item>pumpkin</item>
        <item>cabbage</item>
        <item>capsicum</item>
        <item>carrot</item>
        <item>cauliflower</item>
        <item>coriander</item>
        <item>corn</item>
        <item>chilli</item>
        <item>cucumber</item>
        <item>brinjal</item>
        <item>garlic</item>
        <item>ginger</item>
        <item>jackfruit</item>
        <item>mushroom</item>
        <item>onion</item>
        <item>peas</item>
        <item>mint</item>
        <item>potato</item>
        <item>luffa</item>
        <item>radish</item>
        <item>spinach</item>
        <item>tomato</item>
        <item>turnip</item>
    </string-array>
    <string-array name="fruits">
        <item>apple</item>
        <item>apricot</item>
        <item>banana</item>
        <item>bilberry</item>
        <item>blackberry</item>
        <item>blackcurrant</item>
        <item>coconut</item>
        <item>custard apple</item>
        <item>grapes</item>
        <item>guava</item>
        <item>dates</item>
        <item>kiwi</item>
        <item>lychee</item>
        <item>mango</item>
        <item>orange</item>
        <item>papaya</item>
        <item>pear</item>
        <item>pineapple</item>
        <item>pomegranate</item>
        <item>strawberry</item>
        <item>watermelon</item>
    </string-array>
    <string-array name="vocab">
        <item>birds</item>
        <item>vegetables</item>
        <item>fruits</item>
        <item>animals</item>
    </string-array>
    <string-array name="books">
        <item>moon</item>
        <item>match</item>
        <item>street</item>
        <item>aaloo</item>
    </string-array>
    <string-array name="story1">
        <item>There once was a speedy Hare who bragged about how fast he could run. Tired of hearing him boast, the Tortoise challenged him to a race.</item>
        <item>All the animals in the forest gathered to watch. </item>
        <item>The Hare ran down the road for a while and then and paused to rest. </item>
        <item>He looked back at the tortoise and cried out, "How do you expect to win this race when you are walking along at your slow, slow pace?"</item>
        <item>The Hare stretched himself out alongside the road and fell asleep, thinking, "There is plenty of time to relax."</item>
        <item>The Tortoise walked and walked; never ever stopping until he came to the finish line.</item>
        <item>The animals who were watching cheered so loudly for Tortoise, that they woke up Hare. </item>
        <item>The Hare stretched and yawned and began to run again, but it was too late. Tortoise was already over the line.</item>
        <item>MORAL: Slow and steady wins the race.</item>
    </string-array>
    <string name="story1_hint">Press space and then hit enter for the next page</string>
    <string name="story1_title">The Hare</string>
    <string-array name="story2">
        <item>One hot day, a thirsty crow flew all over the fields looking for water. For a long time, he could not find any. He felt very weak, almost lost all hope.</item>
        <item>Suddenly, he saw a water jug below the tree. He flew straight down to see if there was any water inside. Yes, he could see some water inside the jug!</item>
        <item>The crow tried to push his head into the jug. Sadly, he found that the neck of the jug was too narrow.</item>
        <item>Then he tried to push the jug to tilt for the water to flow out but the jug was too heavy.</item>
        <item>The crow thought hard for a while. Then looking around it, he saw some pebbles.</item>
        <item>he suddenly had a good idea.</item>
        <item>he started picking up the pebbles one by one, dropping each into the jug. </item>
        <item>As more and more pebbles filled the jug, the water level kept rising.</item>
        <item>Soon it was high enough for the crow to drink.</item>
        <item>His plan had worked!</item>
    </string-array>
    <string name="story2_hint">Press space and then hit enter for the next page</string>
    <string name="story2_title">Thirsty Crow</string>
    <string-array name="story3">
        <item>Two little maids went out one day, And really it was shocking! They met poor Tommy on the way, With holes in either stocking.</item>
        <item>They sat down on a low stone seat, And to and fro kept rocking,While they knitted, swift and neat, Each of them a stocking.</item>
        <item>And sweet they sang a little song, The dickie-birds kept mocking</item>
        <item>And Tommy wished that all day longThey\'d sit and knit a stocking</item>
    </string-array>
    <string name="story3_hint">Press space and then hit enter for the next page</string>
    <string name="story3_title">Thirsty Crow</string>
</resources>